# Art-Recognition

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: build_flutter_release.yml  flutter_build.yml  labeler.yaml  labeler.yml
android/app/: build.gradle
app/: Makefile  README.md  setup.sh
app/src/: pubspec.yaml
app/src/android/: build.gradle
app/src/assets/: models.json  yolov5n-fp16.tflite
app/src/lib/: app.dart  main.dart
app/src/web/: manifest.json
backend/: setup.sh
frontend/: Makefile
frontend/ios/Runner/: Info.plist
frontend/linux/: my_application.cc
frontend/src/: pubspec.yaml
frontend/src/lib/: app.dart  helpers.dart  main.dart
frontend/src/web/: index.html
frontend/src/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
network/: Makefile  dependencies.txt  local_dep.txt  setup.sh
network/modules/: datasets.json  filelink.py  modules.json  setup.py
network/src/: __init__.py  exports.py  init.py  run.py  setup.py  train.py
network/src/lib/: files.py  logs.py
network/src/modules/: filelink.py  setup.py
network/src/settings/: datasets.json  modules.json
network/src/yolov5n_saved_model/: fingerprint.pb  saved_model.pb
python/: Makefile  requirements.txt  setup.sh
python/ml/: README.md  setup.sh
python/ml/src/: detect.tflite  exports.py
python/src/tests/: tests_base.py
test/: widget_test.dart
(+60 files in other folders)
