[tool.poetry]
name = "avery"
version = "0.1.0"
description = ""
authors = ["Nylah Daniella Klasson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.17"
ruamel-yaml = "^0.18.5"


[tool.poetry.group.ml.dependencies]
tensorflow = "2.11.0"
cuda-python = "11.7"
clearml = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
